Several security issues fixed. Starting make SEO friendly pages

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,5 @@
+<% title "#{@category.name}" %>
+
 <div class="panel" id="cinza">
     <div class="row">
 	  	<h4><a href="<%= url_for :controller => 'categories', :action => 'index' %>"><< All categories</a></h4><br>
