--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,3 +1,6 @@
+<!-- Page title -->
+<% title "Contact # Ready for a coffee?" %>
+
 <div class="panel" id="cinza">
   	<div class="row">
 		<h1># Contact</h1>
