--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,3 +1,6 @@
+<!-- Page title -->
+<% title "Add a New Store" %>
+
 <div class="panel" id="cinza">
   <div class="row">
   		<div class="large-6 large-centered columns">
