--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title>BTC-Stores - Buy with Bitcoins</title>
+	   <%= title :site => "BTC-Stores",
+            :separator => "#",
+            :reverse => true %>
 	  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
 	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	  <%= csrf_meta_tags %>
